language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_with_list_with_plural_name_does_not_add_another_s.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble([Names, Names])\n}\n\npub type Names {\n  Names\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble([Names, Names])
         ↑              
}

pub type Names {
  Names
}


----- AFTER ACTION

pub fn main() {
  let names = [Names, Names]
  wibble(names)
}

pub type Names {
  Names
}
