language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_in_labelled_args_in_const_selects_innermost_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub const a_constant = Wibble(Wibble())\npub type Wibble { Wibble(arg1: Int, arg2: Int) }\n "
---
----- BEFORE ACTION

pub const a_constant = Wibble(Wibble())
                                     ↑ 
pub type Wibble { Wibble(arg1: Int, arg2: Int) }
 


----- AFTER ACTION

pub const a_constant = Wibble(Wibble(arg1: todo, arg2: todo))
pub type Wibble { Wibble(arg1: Int, arg2: Int) }
