language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_in_labelled_args_with_some_arguments_already_supplied.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(1,)\n}\n\npub fn wibble(arg1 arg1, arg2 arg2) { Nil }\n "
---
----- BEFORE ACTION

pub fn main() {
  wibble(1,)
    ↑       
}

pub fn wibble(arg1 arg1, arg2 arg2) { Nil }
 


----- AFTER ACTION

pub fn main() {
  wibble(1,arg2: todo)
}

pub fn wibble(arg1 arg1, arg2 arg2) { Nil }
