language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_in_labelled_args_with_some_constant_arguments_already_supplied_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub const wibble = Wibble(arg2: 1)\npub type Wibble { Wibble(arg1: Int, arg2: Int) }\n "
---
----- BEFORE ACTION

pub const wibble = Wibble(arg2: 1)
                   ↑              
pub type Wibble { Wibble(arg1: Int, arg2: Int) }
 


----- AFTER ACTION

pub const wibble = Wibble(arg2: 1, arg1: todo)
pub type Wibble { Wibble(arg1: Int, arg2: Int) }
