language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_in_labelled_args_with_some_constant_arguments_already_supplied_3.snap
---
source: language-server/src/tests/action.rs
expression: "\npub const wibble = Wibble(1, arg3: 2)\npub type Wibble { Wibble(arg1: Int, arg2: Int, arg3: Int) }\n "
---
----- BEFORE ACTION

pub const wibble = Wibble(1, arg3: 2)
                   ↑                 
pub type Wibble { Wibble(arg1: Int, arg2: Int, arg3: Int) }
 


----- AFTER ACTION

pub const wibble = Wibble(1, arg3: 2, arg2: todo)
pub type Wibble { Wibble(arg1: Int, arg2: Int, arg3: Int) }
